Add ability to add transaction with past date
