# specs/swagger.json
@@ -22,7 +22,7 @@
       "User": {
         "properties": {
           "_id": {
-            "type": "integer",
+            "type": "string",
             "description": "Generated by Data Base ObjectId"
           },
           "name": {
@@ -48,7 +48,7 @@
       "Transaction": {
         "properties": {
           "_id": {
-            "type": "integer",
+            "type": "string",
             "description": "Generated by Data Base ObjectId"
           },
           "timeStamp": {
@@ -673,17 +673,12 @@
                     "type": "number",
                     "description": "Time stamp in ms"
                   },
-                  "type": {
-                    "type": "string",
-                    "description": "Enum {\"+\" or \"-\"}"
-                  },
                   "category": {
                     "type": "string",
-                    "description": "Category Id"
+                    "example": "Category Id"
                   },
                   "sum": {
-                    "type": "number",
-                    "description": "Number >=0"
+                    "type": "number"
                   },
                   "comment": {
                     "type": "string",
@@ -720,6 +715,9 @@
                         "transaction": {
                           "type": "object",
                           "properties": {
+                            "_id": {
+                              "type": "string"
+                            },
                             "timeStamp": {
                               "type": "number"
                             },
@@ -891,89 +889,83 @@
                     "data": {
                       "type": "object",
                       "properties": {
-                        "data": {
-                          "type": "object",
-                          "properties": {
-                            "docs": {
-                              "type": "array",
-                              "items": {
-                                "schema": null,
-                                "type": "object",
-                                "properties": {
-                                  "_id": {
-                                    "type": "integer",
-                                    "description": "Generated by Data Base ObjectId"
-                                  },
-                                  "timeStamp": {
-                                    "type": "number",
-                                    "description": "Time stamp in ms"
-                                  },
-                                  "date": {
-                                    "type": "string",
-                                    "description": "Date in format DD/MM/20YY"
-                                  },
-                                  "month": {
-                                    "type": "string",
-                                    "description": "Autogenerate from Date"
-                                  },
-                                  "year": {
-                                    "type": "string",
-                                    "description": "Autogenerate from Date"
-                                  },
-                                  "type": {
-                                    "type": "string",
-                                    "description": "Enum {\"+\" or \"-\"}"
-                                  },
-                                  "category": {
-                                    "type": "string",
-                                    "description": "Category Id"
-                                  },
-                                  "comment": {
-                                    "type": "string"
-                                  },
-                                  "sum": {
-                                    "type": "number",
-                                    "description": "Number >=0"
-                                  },
-                                  "owner": {
-                                    "type": "string",
-                                    "description": "User Id"
-                                  },
-                                  "monthlyBalance": {
-                                    "type": "number",
-                                    "description": "Calculated by server Monthly balance at time of transaction"
-                                  }
-                                }
+                        "docs": {
+                          "type": "array",
+                          "items": {
+                            "type": "object",
+                            "properties": {
+                              "_id": {
+                                "type": "string",
+                                "description": "Generated by Data Base ObjectId"
+                              },
+                              "timeStamp": {
+                                "type": "number",
+                                "description": "Time stamp in ms"
+                              },
+                              "date": {
+                                "type": "string",
+                                "description": "Date in format DD/MM/20YY"
+                              },
+                              "month": {
+                                "type": "string",
+                                "description": "Autogenerate from Date"
+                              },
+                              "year": {
+                                "type": "string",
+                                "description": "Autogenerate from Date"
+                              },
+                              "type": {
+                                "type": "string",
+                                "description": "Enum {\"+\" or \"-\"}"
+                              },
+                              "category": {
+                                "type": "string",
+                                "description": "Category Id"
+                              },
+                              "comment": {
+                                "type": "string"
+                              },
+                              "sum": {
+                                "type": "number",
+                                "description": "Number >=0"
+                              },
+                              "owner": {
+                                "type": "string",
+                                "description": "User Id"
+                              },
+                              "monthlyBalance": {
+                                "type": "number",
+                                "description": "Calculated by server Monthly balance at time of transaction"
                               }
-                            },
-                            "totalDocs": {
-                              "type": "number"
-                            },
-                            "limit": {
-                              "type": "number"
-                            },
-                            "totalPages": {
-                              "type": "number"
-                            },
-                            "page": {
-                              "type": "number"
-                            },
-                            "pagingCounter": {
-                              "type": "number"
-                            },
-                            "hasPrevPage": {
-                              "type": "boolean"
-                            },
-                            "hasNextPage": {
-                              "type": "boolean"
-                            },
-                            "prevPage": {
-                              "type": "number"
-                            },
-                            "nextPage": {
-                              "type": "number"
                             }
                           }
+                        },
+                        "totalDocs": {
+                          "type": "number"
+                        },
+                        "limit": {
+                          "type": "number"
+                        },
+                        "totalPages": {
+                          "type": "number"
+                        },
+                        "page": {
+                          "type": "number"
+                        },
+                        "pagingCounter": {
+                          "type": "number"
+                        },
+                        "hasPrevPage": {
+                          "type": "boolean"
+                        },
+                        "hasNextPage": {
+                          "type": "boolean"
+                        },
+                        "prevPage": {
+                          "type": "number"
+                        },
+                        "nextPage": {
+                          "type": "number"
                         }
                       }
                     }
